--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -54,6 +54,7 @@
         "apply-to-selected": "תייג את הספורים שנבחרו",
         "checking": "סימון הסיפור",
         "older-links": "קישורים לאתר הישן",
+        "delete": "מחק את הסיפורים שסומנו",
         "undelete": "שחזור ספורים שנמחקו",
         "to-the-member-page": "לדף החבר",
         "to-the-photo-page": "לדף התמונה",
@@ -169,7 +170,8 @@
         "font-size": "בחרו את גודל האותיות",
         "login-successful": "התחברת בהצלחה!",
         "share": "העתק את הכתובת לצורך שיתוף",
-        "number-of-hits": "מספרי הכניסות באתר"
+        "number-of-hits": "מספרי הכניסות באתר",
+        "hit-counts": "מונה הכניסות לאתר"
     },
     "chats": {
         "chats": "קבוצות דיון",
