--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -67,6 +67,9 @@
         "uploaded-this-month": "ספורים שהועלו החודש",
         "uploaded-this-quarter": "ספורים שהועלו ברבעון זה",
         "uploaded-this-year": "ספורים שהועלו השנה",
+        "approved-and-unapproved": "ספורים שאושרו ושלא אושרו",
+        "unapproved": "ספורים שטרם אושרו",
+        "approved": "ספורים שכבר אושרו",
         "update-associated-members": "עדכן חברים",
         "update-associated-photos": "עדכן תמונות",
         "consolidate-selected-story": "מזג לסיפור אחד",
@@ -75,9 +78,6 @@
         "promote-selected-stories": "קדם את הספורים שנבחרו",
         "unknown-source": "מקור בלתי ידוע",
         "updated-by": "עודכן על ידי",
-        "approved-and-unapproved": "ספורים שאושרו ושלא אושרו",
-        "unapproved": "ספורים שטרם אושרו",
-        "approved": "ספורים שכבר אושרו",
         "topic-already-exists": "יש כבר נושא כזה",
         "push-up": "העלה לראש הרשימה"
     },
@@ -272,9 +272,19 @@
         "docs-duplicate": " - מסמכים שהועלו בעבר",
         "categories": "בחירת נושאים",
         "words": "חיפוש מתקדם ",
+        "word-index": "חפש מילים בתוכן המסמכים",
         "left": "נותרו",
         "failed": " - לא נקלטו במערכת",
-        "save": "שלח"
+        "save": "שלח",
+        "uploaded-any-time": "מסמכים שהועלו בזמן כלשהו",
+        "uploaded-today": "מסמכים שהועלו היום",
+        "uploaded-this-week": "מסמכים שהועלו השבוע",
+        "uploaded-this-month": "מסמכים שהועלו החודש",
+        "uploaded-this-quarter": "מסמכים שהועלו ברבעון זה",
+        "uploaded-this-year": "מסמכים שהועלו השנה",
+        "approved-and-unapproved": "מסמכים שאושרו ושלא אושרו",
+        "unapproved": "מסמכים שטרם אושרו",
+        "approved": "מסמכים שכבר אושרו"
     },
     "terms": {
         "terms": "מונחים",
