help messages revised

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -217,7 +217,7 @@
         "more": "More",
         "less": "Less",
         "save-merges": "Save merges",
-        "save-topic-group": "Save as new topic",
+        "save-topic-group": "Save as compound topic",
         "apply-to-selected": "Apply to selected photos",
         "download": "Download photos",
         "done-selecting": "Finish selecting",
