--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -215,7 +215,7 @@
         "more": "יותר",
         "less": "פחות",
         "save-merges": "שמור את המיזוגים",
-        "save-topic-group": "שמור כנושא חדש",
+        "save-topic-group": "שמור כנושא מְקֻבָּץ",
         "apply-to-selected": "יִשֵּׂם לתמונות שנבחרו",
         "download": "הורדת תמונות",
         "done-selecting": "סיים את שלב הבחירה",
