--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -243,7 +243,8 @@
         "photographer-already-exists": "Photographer already exists",
         "no-photographers-yet": "No photographers yet",
         "no-topics-yet": "No topics defined yet",
-        "no-words-yet": "The dictionary is still empty"
+        "no-words-yet": "The dictionary is still empty",
+        "download-now": "Click to download"
     },
     "videos": {
         "videos": "Video",
