--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -242,7 +242,8 @@
         "no-photographers-yet": "רשימת הצלמים ריקה עדיין",
         "no-topics-yet": "רשימת הנושאים ריקה עדיין",
         "no-words-yet": "המילון ריק עדיין",
-        "download-now": "הקלק להתחלת ההורדה"
+        "download-now": "הקלק להתחלת ההורדה",
+        "pair": "חבר את גב התמונה"
     },
     "videos": {
         "videos": "סרטים",
