--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -217,7 +217,7 @@
         "save-merges": "שמור את המיזוגים",
         "save-topic-group": "שמור כנושא מְקֻבָּץ",
         "apply-to-selected": "יִשֵּׂם לתמונות שנבחרו",
-        "download": "הורדת תמונות",
+        "download": "הורד את התמונות שנבחרו",
         "done-selecting": "סיים את שלב הבחירה",
         "new-story": "ללא כותרת",
         "edit-new-story": "כתוב את סיפורה של התמונה",
@@ -236,14 +236,15 @@
         "search-member": "עם חבר...",
         "any-photo": "כל התמונות",
         "candidates": "מועמדים לצרוף מתוך התמונות",
-        "delete": "מחק את התמונה",
-        "rotate": "סובב את התמונה",
+        "delete": "מחק את התמונות שנבחרו",
+        "rotate": "סובב את התמונות שנבחרו",
         "photographer-already-exists": "הצלם כבר קיים במערכת",
         "no-photographers-yet": "רשימת הצלמים ריקה עדיין",
         "no-topics-yet": "רשימת הנושאים ריקה עדיין",
         "no-words-yet": "המילון ריק עדיין",
         "download-now": "הקלק להתחלת ההורדה",
-        "pair": "חבר את גב התמונה"
+        "pair": "חבר את גב התמונה",
+        "flip": "צפה בצד השני של התמונה"
     },
     "videos": {
         "videos": "סרטים",
