--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -244,7 +244,11 @@
         "no-words-yet": "המילון ריק עדיין",
         "download-now": "הקלק להתחלת ההורדה",
         "pair": "חבר את גב התמונה",
-        "flip": "צפה בצד השני של התמונה"
+        "flip": "צפה בצד השני של התמונה",
+        "photo-date-range": "תאריך התמונה",
+        "keywords": "נושאים קשורים",
+        "photographer-name": "שם הצלם",
+        "unknown-photographer": "לא ידוע"
     },
     "videos": {
         "videos": "סרטים",
