--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -250,7 +250,7 @@
         "photo-date-range": "Photo Date",
         "keywords": "Associatted topics",
         "photographer-name": "Photographer name",
-        "unknown-photographer": "Unknown",
+        "unknown-photographer": "Unknown"
     },
     "videos": {
         "videos": "Video",
