--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -248,6 +248,7 @@
         "photo-date-range": "תאריך התמונה",
         "keywords": "נושאים קשורים",
         "photographer-name": "שם הצלם",
+        "photographer-has-photos": "יש צילומים או סרטים של צלם זה. </br>מחק או קשר צלם אחר.",
         "unknown-photographer": "לא ידוע"
     },
     "videos": {
