--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -174,7 +174,9 @@
         "login-successful": "התחברת בהצלחה!",
         "share": "העתק את הכתובת לצורך שיתוף",
         "number-of-hits": "מספרי הכניסות באתר",
-        "hit-counts": "מונה הכניסות לאתר"
+        "hit-counts": "מונה הכניסות לאתר",
+        "customize": "התאמות",
+        "site-header": "כותרת האתר"
     },
     "chats": {
         "chats": "קבוצות דיון",
