term topics - wip

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -308,6 +308,7 @@
     },
     "terms": {
         "terms": "Terms",
+        "apply-to-selected": "Tag the selected terms",
         "terms-lexicon": "Terms lexicon",
         "new": "New term",
         "filter": "Fast search in term titles"
