--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -308,6 +308,7 @@
     },
     "terms": {
         "terms": "מונחים",
+        "apply-to-selected": "תייג את המונחים שנבחרו",
         "terms-lexicon": "מילון מונחים",
         "new": "מונח חדש",
         "filter": "חפוש מהיר בשמות המונחים"
