--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -311,7 +311,8 @@
         "apply-to-selected": "תייג את המונחים שנבחרו",
         "terms-lexicon": "מילון מונחים",
         "new": "מונח חדש",
-        "filter": "חפוש מהיר בשמות המונחים"
+        "filter": "חפוש מהיר בשמות המונחים",
+        "delete-checked-terms": "מחק את המונחים המסומנים"
     },
     "consts": {
         "vis-never": "לא ניתן לתצוגה!",
