--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -267,6 +267,7 @@
         "new": "New video",
         "add-video": "Add video",
         "paste-video-address": "Paste the video address you copied from Youtube",
+        "apply-to-selected": "Tag the selected videos",
         "video-name": "Name the video clip",
         "send": "Send",
         "message-successful": "Video was successfuly added",
