--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -266,6 +266,7 @@
         "add-video": "הוסף וידאו",
         "paste-video-address": "הדבק את כתובת הוידאו שהעתקת מיוטיוב",
         "video-name": "תן שם לקטע הוידאו",
+        "apply-to-selected": "יִשֵּׂם לסרטים שנבחרו",
         "send": "שלח",
         "message-successful": "הוידאו הועלה בהצלחה",
         "duplicate": "הוידאו כבר קיים במערכת",
