from photo strip to photos page

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -259,7 +259,8 @@
         "show-all-photos": "Show all photos",
         "cancel": "Cancel",
         "select-new-copies": "Select new copies",
-        "no-duplicates-found": "No duplicates found"
+        "no-duplicates-found": "No duplicates found",
+        "show-in-photo-page": "Show in photos page"
     },
     "videos": {
         "videos": "Video",
