--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -353,7 +353,7 @@
         "palette-earth": "צבעי אדמה"
     },
     "feedback": {
-        "feedback": "משוב",
+        "feedback": "צור קשר",
         "any-device": "מסך כלשהו",
         "desktop": "מחשב שולחן",
         "tablet": "טבלט",
