--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -214,8 +214,8 @@
         "save": "שלח",
         "photos-were-selected": " - תמונות שנבחרו",
         "sharing": " בנוסף להעלאה מהמחשב האישי, ניתן לשתף תמונות מסמרטפונים, שרותי ענן כדוגמת גוגל פוטוס וכדומה בכתובת ",
-        "more-smaller": "הקטן",
-        "larger": "הגדל",
+        "more-smaller": "יותר",
+        "larger": "פחות",
         "save-merges": "שמור את המיזוגים",
         "save-topic-group": "שמור כנושא מְקֻבָּץ",
         "apply-to-selected": "יִשֵּׂם לתמונות שנבחרו",
@@ -353,7 +353,7 @@
         "palette-earth": "צבעי אדמה"
     },
     "feedback": {
-        "feedback": "צור קשר",
+        "feedback": "צרו קשר",
         "any-device": "מסך כלשהו",
         "desktop": "מחשב שולחן",
         "tablet": "טבלט",
