labels of the  photo sizes slider

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -214,8 +214,8 @@
         "save": "שלח",
         "photos-were-selected": " - תמונות שנבחרו",
         "sharing": " בנוסף להעלאה מהמחשב האישי, ניתן לשתף תמונות מסמרטפונים, שרותי ענן כדוגמת גוגל פוטוס וכדומה בכתובת ",
-        "more-smaller": "יותר",
-        "larger": "פחות",
+        "more-smaller": "הקטן",
+        "larger": "הגדל",
         "save-merges": "שמור את המיזוגים",
         "save-topic-group": "שמור כנושא מְקֻבָּץ",
         "apply-to-selected": "יִשֵּׂם לתמונות שנבחרו",
