--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -394,7 +394,7 @@
     "promote-send": "שלח",
     "by-new-count": "קליקים חדשים",
     "by-old-count": "קליקים מצטברים",
-    "enter-search-words": "הקלד מילות חיפוש והמתן",
+    "enter-search-words": "הקלידו מילות חיפוש",
     "no-results": "<p dir='rtl'>לא נמצאו תוצאות מתאימות.<br>יש לשנות או להשמיט חלק מהמסננים</p>",
     "result1": "חברים",
     "result2": "ספורים",
