docs page. search box.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -308,7 +308,8 @@
         "uploaded-this-year": "Documents uploaded this year",
         "approved-and-unapproved": "Both approved and unapproved",
         "unapproved": "Unapproved Documents",
-        "approved": "Approved Documents"
+        "approved": "Approved Documents",
+        "drag-left-and-right": "Drag here left or right"
     },
     "terms": {
         "terms": "Terms",
