chatrooms for objects. wip.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -173,6 +173,7 @@
         "register-done": "Got it",
         "passwords-dont-match": "Passwords don't match",
         "chat-rooms": "Chat rooms",
+        "chats": "Discussions",
         "font-size": "Select font size",
         "login-successful": "You have logged in successfuly",
         "share": "Copy the address",
