--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -171,6 +171,7 @@
         "register-done": "הבנתי",
         "passwords-dont-match": "הסיסמה לאישור שונה מהסיסמה",
         "chat-rooms": "קבוצות דיון",
+        "chats": "תגובות והערות",
         "font-size": "בחרו את גודל האותיות",
         "login-successful": "התחברת בהצלחה!",
         "share": "העתק את הכתובת לצורך שיתוף",
