scan photos in reverse upload date order

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -199,6 +199,8 @@
         "uploaded-this-month": "Photos uploaded this month",
         "uploaded-this-quarter": "Photos uploaded last quarter",
         "uploaded-this-year": "Photos uploaded this year",
+        "random-order": "Random order",
+        "upload-time-order": "By upload time",
         "click-topic": "Search tag and click on it",
         "click-photographer": "Search photographer and click on it",
         "from-date": "Photo taken after",
