--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -198,6 +198,8 @@
         "uploaded-this-month": "תמונות שהועלו החודש",
         "uploaded-this-quarter": "תמונות שהועלו ברבעון זה",
         "uploaded-this-year": "תמונות שהועלו השנה",
+        "random-order": "בסדר אקראי",
+        "upload-time-order": "לפי זמן ההעלאה ",
         "click-topic": "חפש נושא והקלק עליו",
         "click-photographer": "חפש צלם והקלק עליו",
         "from-date": "צולם אחרי",
