chatroom per story. wip.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -62,6 +62,8 @@
         "term-page": "From the terms dictionary",
         "categories": "Categories selection",
         "words": "Advanced search",
+        "random-order": "Random Order",
+        "by-chats": "View recent responses",
         "uploaded-any-time": "Stories uploaded any time",
         "uploaded-today": "Stories uploaded today",
         "uploaded-this-week": "Stories uploaded this week",
