--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -61,6 +61,8 @@
         "term-page": "מתוך מילון המונחים",
         "categories": "בחירת נושאים",
         "words": "חיפוש מתקדם ",
+        "random-order": "ללא סדר מיוחד",
+        "by-chats": "תגובות שנוספו לאחרונה",
         "uploaded-any-time": "ספורים שהועלו בזמן כלשהו",
         "uploaded-today": "ספורים שהועלו היום",
         "uploaded-this-week": "ספורים שהועלו השבוע",
