--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -175,13 +175,17 @@
         "passwords-dont-match": "הסיסמה לאישור שונה מהסיסמה",
         "chat-rooms": "קבוצות דיון",
         "chats": "תגובות והערות",
-        "font-size": "בחרו את גודל האותיות",
+        "font-size": "בחירת גודל האותיות",
         "login-successful": "התחברת בהצלחה!",
         "share": "העתק את הכתובת לצורך שיתוף",
         "number-of-hits": "מספרי הכניסות באתר",
         "hit-counts": "מונה הכניסות לאתר",
         "customize": "התאמות",
         "customize-dictionary": "התאם טקסט כלשהו",
+        "personalize": "התאמה אישית",
+        "select-language": "בחירת שפה",
+        "select-colors": "בחירת צבעים",
+        "sharing": "שיתוף",
         "enter-text-to-replace": "הקלד את הטקסט שברצונך להחליף ואז הקלק עליו",
         "site-header": "כותרת האתר"
     },
