sort stories by story date. wip.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -63,6 +63,8 @@
         "words": "חיפוש מתקדם ",
         "random-order": "ללא סדר מיוחד",
         "by-chats": "תגובות שנוספו לאחרונה",
+        "new-to-old": "חדשים תחילה",
+        "old-to-new": "ישנים תחילה",
         "uploaded-any-time": "ספורים שהועלו בזמן כלשהו",
         "uploaded-today": "ספורים שהועלו היום",
         "uploaded-this-week": "ספורים שהועלו השבוע",
