--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -64,6 +64,8 @@
         "words": "Advanced search",
         "random-order": "Random Order",
         "by-chats": "View recent responses",
+        "new-to-old": "New to old",
+        "old-to-new": "Old to new",
         "uploaded-any-time": "Stories uploaded any time",
         "uploaded-today": "Stories uploaded today",
         "uploaded-this-week": "Stories uploaded this week",
