--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -391,6 +391,13 @@
         "message-successful": "המשוב שלך נשמר בהצלחה",
         "device-details": "פרטי המכשיר"
     },
+    "admin": {
+        "duplicate-app-name": "מזהה האתר כבר תפוס!",
+        "new-app-requested": "בקשתך בטיפול. אנא בדוק את תיבת הדואל שלך. אם לא קבלת הודעה תוך מספר דקות, בדוק את תיבת דואר הזבל.",
+        "app-name": "מזהה האתר שלך (באותיות לועזיות)",
+        "customer-info": "פרטי מנהל האתר",
+        "fields-missing": "יש למלא את כל הפרטים!"
+    },
     "go-back": "חזור",
     "parents": "הורים",
     "siblings": "אחים/אחיות",
